# gamecovers

./: .gitignore  admin.html  admin_index.html  get_lists.py  getgenres.py  index.html  juegos.json  listas_youtube.json  overrides.json  pyproject.toml  requirements.txt  update_lists.py
.devcontainer/: Dockerfile  devcontainer.json
