[project]
name = "gamecovers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests==2.31.0",
    "yt-dlp==2023.11.16",
    "selenium==4.14.0",
    "webdriver-manager==4.0.1",
    "python-dotenv==1.0.0",
    "beautifulsoup4==4.12.2",
    "lxml>=5.0.0",
    "google-auth-oauthlib==1.2.2",
    "google-api-python-client==2.176.0",
]
